--- a/scss/_global-variables.scss
+++ b/scss/_global-variables.scss
@@ -1,6 +1,2 @@
 // Variables
-$bg-color: #29241d;
-$bg-color-alternative: #524c44;
-$text-color: #f8f8df;
-$text-color-alternative: #918e7e;
-$primary-color: #cc8548;
+$paleta: ( "bg-color":#29241d, "bg-color-alternative": #524c44, "text-color": #f8f8df, "text-color-alternative":#918e7e, "primary": #cc8548);
