--- a/scss/_tags.scss
+++ b/scss/_tags.scss
@@ -1,5 +1,5 @@
 html {
-    background-color: $bg-color;
+    background-color: map-get($map: $paleta, $key: "bg-color");
 }
 
 body {
@@ -12,22 +12,22 @@ ul {
 }
 
 a {
-    color: $text-color-alternative;
+    color: map-get($map: $paleta, $key: "text-color-alternative");
     &:hover {
-        color: $text-color;
+        color: map-get($map: $paleta, $key: "text-color");
         transition: color 0.5s;
     }
 }
 
 input {
-    background-color: $bg-color-alternative;
-    border-color: $bg-color-alternative;
+    background-color: map-get($map: $paleta, $key: "bg-color-alternative");
+    border-color: map-get($map: $paleta, $key: "bg-color-alternative");
     border-radius: 500px;
     border-width: 0px;
-    color: $text-color;
+    color: map-get($map: $paleta, $key: "text-color");
     padding-left: 17px;
 }
 
 footer {
-    border-top: solid 1px $bg-color-alternative;
+    border-top: solid 1px map-get($map: $paleta, $key: "bg-color-alternative");
 }
