--- a/scss/elements/_cta-1.scss
+++ b/scss/elements/_cta-1.scss
@@ -1,34 +1,39 @@
+@mixin shadow {
+    -webkit-animation: shadow-drop-center 0.4s ease-in-out both;
+    animation: shadow-drop-center 0.4s ease-in-out both;
+    // Animation
+    @-webkit-keyframes shadow-drop-center {
+        0% {
+            -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        }
+        100% {
+            -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+            box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+        }
+    }
+    @keyframes shadow-drop-center {
+        0% {
+            -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        }
+        100% {
+            -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+            box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+        }
+    }
+}
+
 .cta-1 {
-    background-color: $primary-color;
+    @extend .button;
+    background-color: map-get($map: $paleta, $key: "primary");
     border-radius: 500px;
     border-width: 0px;
-    color: $text-color;
+    color: map-get($map: $paleta, $key: "text-color");
     display: inline-block;
     padding: 10px 25px 10px 25px;
     text-align: center;
     &:hover {
-        -webkit-animation: shadow-drop-center 0.4s ease-in-out both;
-        animation: shadow-drop-center 0.4s ease-in-out both;
-        // Animation
-        @-webkit-keyframes shadow-drop-center {
-            0% {
-                -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-                box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-            }
-            100% {
-                -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-                box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-            }
-        }
-        @keyframes shadow-drop-center {
-            0% {
-                -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-                box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-            }
-            100% {
-                -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-                box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-            }
-        }
+        @include shadow()
     }
 }
