--- a/scss/elements/_nav.scss
+++ b/scss/elements/_nav.scss
@@ -1,5 +1,5 @@
 nav {
-    border-bottom: solid 1px $bg-color-alternative;
+    border-bottom: solid 1px map-get($map: $paleta, $key: "bg-color-alternative");
     .nav-content_wrapper {
         align-items: center;
         display: flex;
@@ -30,7 +30,7 @@ nav {
 // Mobile landscape breakpoint
 @media screen and (max-width: 767px) {
     nav {
-        border-bottom: solid 1px $bg-color-alternative;
+        border-bottom: solid 1px map-get($map: $paleta, $key: "bg-color-alternative");
         .nav-content_wrapper {
             align-items: center;
             display: flex;
